src/github.com/ebay/beam/query/parser/testdata/legacy/errors/5_terms_not_valid.bql
# too many terms, and the last one isn't a valid term at all.
?id ?s rdfs:label ?l unknown
